@@ -24,7 +24,6 @@ import org.jvnet.hudson.test.junit.jupiter.WithJenkins;
 
 import java.io.File;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.logging.Logger;
@@ -255,10 +254,11 @@ class WorkflowTest extends DefaultEnvironment {
 	@Test
 	void testGlobalLib() throws Exception {
 		// submit test library
-		String content = ""
-				+ "def call(String name = 'human') {\n" +
-				"    echo \"Hello again, ${name}.\"\n" +
-				"}";
+		String content = """
+				\
+				def call(String name = 'human') {
+				    echo "Hello again, ${name}."
+				}""";
 		submitFile(jenkins, "//depot/library/vars/sayHello.groovy", content);
 
 		// change in source (after library)
@@ -274,7 +274,7 @@ class WorkflowTest extends DefaultEnvironment {
 
 		GlobalLibraries globalLib = (GlobalLibraries) jenkins.getInstance().getDescriptor(GlobalLibraries.class);
 		assertNotNull(globalLib);
-		globalLib.setLibraries(Arrays.asList(config));
+		globalLib.setLibraries(List.of(config));
 
 		// create job using library
 		WorkflowJob job = jenkins.jenkins.createProject(WorkflowJob.class, "useLib");
@@ -316,18 +316,20 @@ class WorkflowTest extends DefaultEnvironment {
 	void testGlobalLibMultiple() throws Exception {
 		// First LibraryW
 		// submit test library
-		String content1 = ""
-				+ "def call(String name = 'human') {\n" +
-				"    echo \"Hello1, ${name}.\"\n" +
-				"}";
+		String content1 = """
+				\
+				def call(String name = 'human') {
+				    echo "Hello1, ${name}."
+				}""";
 		submitFile(jenkins, "//depot/library1/vars/sayHello1.groovy", content1);
 
 		// Second library
 		// submit test library
-		String content2 = ""
-				+ "def call(String name = 'human') {\n" +
-				"    echo \"Hello2, ${name}.\"\n" +
-				"}";
+		String content2 = """
+				\
+				def call(String name = 'human') {
+				    echo "Hello2, ${name}."
+				}""";
 		submitFile(jenkins, "//depot/library2/vars/sayHello2.groovy", content2);
 
 		// change in source (after library)
